@@ -27,7 +27,7 @@ export(Surv, Surv2, Surv2data, aeqSurv, aareg, agreg.fit,
        is.na.Surv, is.ratetable, nsk,
        match.ratetable, neardate,
        psurvreg, qsurvreg, dsurvreg, pseudo,
-       pspline, pyears, ratetableDate, 
+       pspline, pyears, ratetableDate, ratetable,
        ridge, royston, rsurvreg, rttright,statefig, strata, 
        survSplit, survcheck, survcondense, survdiff, survexp,  survfit,
        survfit0, survfit.formula,
@@ -44,6 +44,7 @@ S3method('[', Surv2)
 S3method('[', cox.zph)
 S3method('[', coxph.penalty)
 S3method('[', ratetable)
+S3method('[', ratetable2)
 S3method('[', survfit)
 S3method('[', survfitms)
 S3method('[', tcut)
@@ -107,6 +108,7 @@ S3method(is.na, Surv)
 S3method(is.na, Surv2)
 S3method(is.na, coxph.penalty)
 S3method(is.na, ratetable)
+S3method(is.na, ratetable2)
 S3method(labels, survreg)
 S3method(levels, Surv)
 S3method(levels, tcut)
